sector inicio terminado

--- a/index.html
+++ b/index.html
@@ -31,16 +31,27 @@
         <section>
             <div class="div1sec1">
                 <h2>¿Por qué estudiar Matemáticas?</h2>
-                <p>Las matemáticas son una materia fundamental en nuestra vida diaria. Nos ayudan a entender el mundo que nos rodea y a tomar decisiones informadas. Desde calcular el cambio en una tienda hasta planificar una ruta de viaje, las matemáticas están presentes en muchas situaciones cotidianas.<br>
+                <p>Las matemáticas son una materia fundamental en nuestra vida diaria. Nos ayudan a entender el mundo
+                    que nos rodea y a tomar decisiones informadas. Desde calcular el cambio en una tienda hasta
+                    planificar una ruta de viaje, las matemáticas están presentes en muchas situaciones cotidianas.<br>
 
-                Además, estudiar matemáticas desarrolla habilidades importantes como el pensamiento lógico, la resolución de problemas y la capacidad de análisis. Estas habilidades son valiosas en cualquier campo de estudio o trabajo, y pueden ayudarnos a tener éxito en nuestras metas personales y profesionales.<br>
-                    
-                Por último, las matemáticas también tienen un lado fascinante y hermoso. Desde las simetrías en la naturaleza hasta los misterios del universo, las matemáticas nos permiten explorar y comprender el mundo de una manera única.<br>
-                    
-                En resumen, estudiar matemáticas es importante porque nos ayuda a entender el mundo, desarrollar habilidades valiosas y explorar la belleza de la matemática. <b>¡Así que no tengas miedo de sumergirte en el fascinante mundo de las matemáticas!</b></p>
+                    Además, estudiar matemáticas desarrolla habilidades importantes como el pensamiento lógico, la
+                    resolución de problemas y la capacidad de análisis. Estas habilidades son valiosas en cualquier
+                    campo de estudio o trabajo, y pueden ayudarnos a tener éxito en nuestras metas personales y
+                    profesionales.<br>
+
+                    Por último, las matemáticas también tienen un lado fascinante y hermoso. Desde las simetrías en la
+                    naturaleza hasta los misterios del universo, las matemáticas nos permiten explorar y comprender el
+                    mundo de una manera única.<br>
+
+                    En resumen, estudiar matemáticas es importante porque nos ayuda a entender el mundo, desarrollar
+                    habilidades valiosas y explorar la belleza de la matemática. <b>¡Así que no tengas miedo de
+                        sumergirte en el fascinante mundo de las matemáticas!</b></p>
             </div>
             <div class="div2sec1">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/RlUZv0MoVWk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" ></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/RlUZv0MoVWk"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe>
             </div>
         </section>
         <section>
@@ -130,7 +141,7 @@
                     <div>
                         <h1>Cálculo diferencial</h1>
                         <p>Adentrate en el mundo de las derivadas con este curso.</p>
-                        <a href="courses.html">Ir al curso</a>
+                        <a href="courses.html/">Ir al curso</a>
                     </div>
                 </div>
                 <div class="curso2">
@@ -157,15 +168,46 @@
         </section>
         <section>
             <div class="div1sec4">
-                <h1>CONTACTANOS</h1>
+                <h1>CONSULTA LOS MEJORES LIBROS DE MATEMÁTICAS</h1>
             </div>
             <div class="div2sec4">
-                <a href="#">SOPORTE</a>
+                <a href="#">QUIERO VERLOS!</a>
             </div>
         </section>
     </main>
     <footer>
+        <div class="socialfooter">
+            <div class="socialicon f">
+                <a href="https://www.facebook.com" target="_blank" alt="facebook"><img
+                        src="pics/facebook.png"></a>
+                <a href="https://www.facebook.com" target="_blank">Facebook</a>
+            </div>
+            <div class="socialicon t">
+                <a href="https://twitter.com" target="_blank" alt="twitter"><img
+                        src="pics/gorjeo.png"></a>
+                <a href="https://twitter.com" target="_blank">Twitter</a>
 
+            </div>
+            <div class="socialicon i">
+                <a href="https://www.instagram.com" target="_blank" alt="instagram"><img
+                        src="pics/instagram.png"></a>
+                <a href="https://www.instagram.com" target="_blank">Instagram</a>
+
+            </div>
+        </div>
+        <div class="footer-logo">
+            <img src="pics/favicon.ico" alt="Logo de TuPagina">
+            <h3>4Mathics</h3>
+        </div>
+        <div class="secfooter">
+            <div class="supportfooter">
+                <a href="support.html"><img src="pics/soporte-tecnico.png" alt="soporte"></a>
+                <a href="support.html">Soporte</a>
+            </div>
+            <div class="rights">
+                <p>Todos los derechos reservados </p> <p class="bluetext"> © </p> <p> 4Mathics 2023</p>
+            </div>
+        </div>
     </footer>
 </body>
 
