--- a/courses.html
+++ b/courses.html
@@ -186,6 +186,41 @@
                 </div>
             </div>
         </section>
+    </main>
+    <footer>
+        <div class="socialfooter">
+            <div class="socialicon f">
+                <a href="https://www.facebook.com" target="_blank" alt="facebook"><img
+                        src="pics/facebook.png"></a>
+                <a href="https://www.facebook.com" target="_blank">Facebook</a>
+            </div>
+            <div class="socialicon t">
+                <a href="https://twitter.com" target="_blank" alt="twitter"><img
+                        src="pics/gorjeo.png"></a>
+                <a href="https://twitter.com" target="_blank">Twitter</a>
+
+            </div>
+            <div class="socialicon i">
+                <a href="https://www.instagram.com" target="_blank" alt="instagram"><img
+                        src="pics/instagram.png"></a>
+                <a href="https://www.instagram.com" target="_blank">Instagram</a>
+
+            </div>
+        </div>
+        <div class="footer-logo">
+            <img src="pics/favicon.ico" alt="Logo de TuPagina">
+            <h3>4Mathics</h3>
+        </div>
+        <div class="secfooter">
+            <div class="supportfooter">
+                <a href="support.html"><img src="pics/soporte-tecnico.png" alt="soporte"></a>
+                <a href="support.html">Soporte</a>
+            </div>
+            <div class="rights">
+                <p>Todos los derechos reservados </p> <p class="bluetext"> © </p> <p> 4Mathics 2023</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
