Cambiado todo cursos, adaptado el footer

--- a/courses.html
+++ b/courses.html
@@ -13,6 +13,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Konkhmer+Sleokchher&display=swap" rel="stylesheet">
     <title>4Mathics</title>
 </head>
 
@@ -40,49 +43,83 @@
             <div class="principaltitle">
                 <h1>Estos son los cursos que tenemos para vos</h1>
             </div>
-            <div class="coursecontainer" id="cursos">
+            <div class="coursescontainer">
                 <div>
-                    <div class="levelpartsup">
-                        <div class="imgstyle1"></div>
-                        <div class="namestyle">Derivadas</div>
+                    <div class="title1">
+                        <div class="title1text">Curso</div>
                     </div>
-                    <div class="levelpartinf">
-                        <div class="levelpartinftitle">Curso de introducción a las Derivadas</div>
-                        <div class="levelpartinfdescription">En este curso aprenderás, desde cero, el concepto de la
-                            derivada y a derivar funciones
-                            por
-                            definición y por regla. Conocerás el criterio de la 1° y 2° derivada
-                            y la información que aporta para el Análisis Matemático.</div>
-                        <div class="levelpartinfbutton"><a href="#derivada">EMPEZAR A APRENDER</a></div>
+                    <div class="title2">
+                        <div class="title2text">Derivadas</div>
                     </div>
+                    <div class="descriptionzone">
+                        <div class="descriptionzonetext">
+                            <hr>
+                            <p>A lo largo del curso, aprenderás a calcular derivadas utilizando métodos sencillos y
+                                reglas básicas. Descubrirás cómo interpretar geométricamente las derivadas para
+                                comprender la pendiente de una función y analizar la forma de las curvas. <br>
+                                ¡No necesitas experiencia previa en cálculo! Este curso está diseñado para principiantes
+                                que desean adquirir una sólida base en derivadas y desbloquear su potencial en el mundo
+                                del cálculo diferencial.</p>
+                            <hr>
+                        </div>
+                    </div>
+                    <div class="duration">
+                        <div class="iconclock"><img src="pics/clock.png" alt=""></div>
+                        <div class="cantclases">9 clases.</div>
+                    </div>
+                    <div class="buttonvermas">Ver más</div>
                 </div>
                 <div>
-                    <div class="levelpartsup">
-                        <div class="imgstyle2"></div>
-                        <div class="namestyle">Integrales</div>
+                    <div class="title1">
+                        <div class="title1text">Curso</div>
                     </div>
-                    <div class="levelpartinf">
-                        <div class="levelpartinftitle">Curso de introducción a las Integrales</div>
-                        <div class="levelpartinfdescription">En este curso aprenderás, desde cero, el concepto de
-                            integrar
-                            funciones. Resolverás integrales inmediatas utilizando las tablas de integración y conocerás
-                            algunas propiedades como la integración por sustitución y por partes.</div>
-                        <div class="levelpartinfbutton"><a href="#integrales">EMPEZAR A APRENDER</a></div>
+                    <div class="title2">
+                        <div class="title2text">Integrales</div>
                     </div>
+                    <div class="descriptionzone">
+                        <div class="descriptionzonetext">
+                            <hr>
+                            <p>En este curso, exploraremos los fundamentos y conceptos básicos de las integrales, una de
+                                las herramientas matemáticas más poderosas y versátiles.
+                                Aprenderás sobre los diferentes tipos de integrales, incluyendo las integrales
+                                indefinidas y definidas, así como los métodos de integración más comunes.
+                                Además, te familiarizarás con técnicas de integración, como integración por sustitución
+                                y por partes, que te permitirán resolver una amplia gama de problemas.
+                            </p>
+                            <hr>
+                        </div>
+                    </div>
+                    <div class="duration">
+                        <div class="iconclock"><img src="pics/clock.png" alt=""></div>
+                        <div class="cantclases">8 clases.</div>
+                    </div>
+                    <div class="buttonvermas">Ver más</div>
                 </div>
                 <div>
-                    <div class="levelpartsup">
-                        <div class="imgstyle3"></div>
-                        <div class="namestyle">Cálculo integral</div>
+                    <div class="title1">
+                        <div class="title1text">Curso</div>
                     </div>
-                    <div class="levelpartinf">
-                        <div class="levelpartinftitle">Integrales definidas e impropias</div>
-                        <div class="levelpartinfdescription">En este curso trabajarás con integrales que tengan limites
-                            definidos y, en ciertas ocasiones, impropios. Utilizarás el teorema fundamental del Cálculo
-                            y la
-                            Regla de Barrow para averiguar áreas bajo curvas de determinadas funciones.</div>
-                        <div class="levelpartinfbutton"><a href="#calcIntegral">EMPEZAR A APRENDER</a></div>
+                    <div class="title2">
+                        <div class="title2text">Cálculo integral</div>
                     </div>
+                    <div class="descriptionzone">
+                        <div class="descriptionzonetext">
+                            <hr>
+                            <p>Este curso te llevará a explorar y comprender uno de los conceptos fundamentales de las
+                                matemáticas: el cálculo integral. A lo largo de las lecciones, te sumergirás en el
+                                fascinante mundo de las integrales y aprenderás cómo aplicarlas para resolver una amplia
+                                gama de problemas.
+                                Aprenderás cómo calcular integrales indefinidas y cómo utilizarlas para calcular áreas,
+                                volúmenes, longitudes de arco y otros problemas relacionados.
+                            </p>
+                            <hr>
+                        </div>
+                    </div>
+                    <div class="duration">
+                        <div class="iconclock"><img src="pics/clock.png" alt=""></div>
+                        <div class="cantclases">10 clases.</div>
+                    </div>
+                    <div class="buttonvermas">Ver más</div>
                 </div>
             </div>
         </section>
@@ -99,25 +136,20 @@
         </section>
         <section>
             <div class="content">
-                <div>
-                    <div class="descriptiontitle">Curso de introducción a las derivadas</div>
-                    <div class="descriptiontext">Hay un mundo antes y después de la derivada. En este curso conocerás el
-                        concepto de derivada
-                        partiendo del limite. Derivarás por definición y por regla utilizando la tabla de derivadas.
-                        Aprenderás algunas propiedades
-                        como la regla de la cadena y el teorema del "sandwich" y finalmente analizarás el comportamiento
-                        de las funciones mediante
-                        el criterio de la primera y segunda derivada.
-                    </div>
-                    <div class="titletemary">Temario:</div>
-                    <div class="descriptionlist">
-                        <ul>
+                <div class="contenedor-imagen"><img src="pics/DERIVADA1.png" alt=""></div>
+                <div class="infocourse">
+                    <div class="texto1">Curso de Introducción a las derivadas</div>
+                    <div class="texto2"><b>Temario:</b></div>
+                    <div class="temarylist">
+                        <ul class="column">
                             <li>La recta secante y tangente en un punto.</li>
                             <li>Límite y pendiente de la recta tangente en un punto.</li>
                             <li>Derivada por definición.</li>
                             <li>Derivada por regla y tabla de derivadas.</li>
                             <li>Derivada del producto y del cociente de funciones.</li>
-                            <li id="integrales">Derivada de una función compuesta. Regla de la cadena.</li>
+                        </ul>
+                        <ul class="column">
+                            <li>Derivada de una función compuesta. Regla de la cadena.</li>
                             <li>Derivada de sen(x) / x. Teorema del "Sandwich".</li>
                             <li>Criterio de la primera y segunda derivada.</li>
                             <li>Analisis de funciones: puntos críticos e intervalos de crecimiento y decrecimiento</li>
@@ -125,52 +157,37 @@
                         </ul>
                     </div>
                 </div>
-                <div class="containerimg">
-                    <div><img src="pics/axis.png" alt=""></div>
-                </div>
-                <div class="buttoncourse">
-                    <div class="buttontext">EMPEZAR EL CURSO</div>
-                </div>
-                <div>
-                    <div class="descriptiontitle">Curso de introducción a las Integrales</div>
-                    <div class="descriptiontext">Las integrales son una parte esencial del cálculo y se utilizan en una amplia variedad de
-                         disciplinas, como la física, la ingeniería, la economía y la estadística, entre otras. En este curso aprenderás a hallar la función
-                         primitiva o antiderivada de una función dada utilizando la tabla de integrales y algunas propiedades como la integración por sustitución y
-                         la integración por partes.
-                    </div>
-                    <div class="titletemary">Temario:</div>
-                    <div class="descriptionlist">
-                        <ul>
+                <div class="infocourse">
+                    <div class="texto1">Curso de introducción a las Integrales</div>
+                    <div class="texto2"><b>Temario:</b></div>
+                    <div class="temarylist">
+                        <ul class="column">
                             <li>Derivada y antiderivada.</li>
                             <li>Partes de una integral: integrando y diferencial de integración.</li>
                             <li>Integrales indefinidas.</li>
                             <li>Integral de una constante por una función.</li>
+                        </ul>
+                        <ul class="column">
                             <li>Integral de la suma y de la resta de funciones.</li>
-                            <li id="calcIntegral">Integración por sustitución.</li>
+                            <li>Integración por sustitución.</li>
                             <li>Integración por partes.</li>
                             <li>Evaluación.</li>
                         </ul>
                     </div>
                 </div>
-                <div class="containerimg">
-                    <div><img src="pics/axis.png" alt=""></div>
-                </div>
-                <div class="buttoncourse">
-                    <div class="buttontext">EMPEZAR EL CURSO</div>
-                </div>
-                <div>
-                    <div class="descriptiontitle">Curso de Cálculo Integral</div>
-                    <div class="descriptiontext">Existen dos tipos principales de integrales: la integral definida y la integral indefinida.
-                         La integral definida se utiliza para calcular el área exacta bajo una curva en un intervalo específico. En este curso se continuará
-                         con lo visto en el Curso de Introducción a las Integrales para calcular áreas bajo y entre curvas y resolver integrales con limites infinitos.
-                    </div>
-                    <div class="titletemary">Temario:</div>
-                    <div class="descriptionlist">
-                        <ul>
+                <div class="contenedor-imagen"><img src="pics/DERIVADA1.png" alt=""></div>
+                <div class="contenedor-imagen"><img src="pics/DERIVADA1.png" alt=""></div>
+                <div class="infocourse">
+                    <div class="texto1">Curso de Cálculo Integral</div>
+                    <div class="texto2"><b>Temario:</b></div>
+                    <div class="temarylist">
+                        <ul class="column">
                             <li>Aproximación de areas: la suma de Riemann.</li>
                             <li>Los límites de integración.</li>
                             <li>El teorema fundamental del Cálculo Integral.</li>
                             <li>Área bajo la curva.</li>
+                        </ul>
+                        <ul class="column">
                             <li>Área entre dos curvas.</li>
                             <li>Límites de integración infinitos.</li>
                             <li>Integrales impropias.</li>
@@ -178,31 +195,22 @@
                         </ul>
                     </div>
                 </div>
-                <div class="containerimg">
-                    <div><img src="pics/funcion.png" alt=""></div>
-                </div>
-                <div class="buttoncourse">
-                    <div class="buttontext">EMPEZAR EL CURSO</div>
-                </div>
             </div>
         </section>
-    </main>
+        </main>
     <footer>
         <div class="socialfooter">
             <div class="socialicon f">
-                <a href="https://www.facebook.com" target="_blank" alt="facebook"><img
-                        src="pics/facebook.png"></a>
+                <a href="https://www.facebook.com" target="_blank" alt="facebook"><img src="pics/facebook.png"></a>
                 <a href="https://www.facebook.com" target="_blank">Facebook</a>
             </div>
             <div class="socialicon t">
-                <a href="https://twitter.com" target="_blank" alt="twitter"><img
-                        src="pics/gorjeo.png"></a>
+                <a href="https://twitter.com" target="_blank" alt="twitter"><img src="pics/gorjeo.png"></a>
                 <a href="https://twitter.com" target="_blank">Twitter</a>
 
             </div>
             <div class="socialicon i">
-                <a href="https://www.instagram.com" target="_blank" alt="instagram"><img
-                        src="pics/instagram.png"></a>
+                <a href="https://www.instagram.com" target="_blank" alt="instagram"><img src="pics/instagram.png"></a>
                 <a href="https://www.instagram.com" target="_blank">Instagram</a>
 
             </div>
@@ -217,7 +225,9 @@
                 <a href="support.html">Soporte</a>
             </div>
             <div class="rights">
-                <p>Todos los derechos reservados </p> <p class="bluetext"> © </p> <p> 4Mathics 2023</p>
+                <p>Todos los derechos reservados </p>
+                <p class="bluetext"> © </p>
+                <p> 4Mathics 2023</p>
             </div>
         </div>
     </footer>
