mas imagenes, me faltan IDS y botones

--- a/courses.html
+++ b/courses.html
@@ -175,8 +175,8 @@
                         </ul>
                     </div>
                 </div>
-                <div class="contenedor-imagen"><img src="pics/DERIVADA1.png" alt=""></div>
-                <div class="contenedor-imagen"><img src="pics/DERIVADA1.png" alt=""></div>
+                <div class="contenedor-imagen"><img src="pics/calculator.png" alt=""></div>
+                <div class="contenedor-imagen"><img src="pics/integral.png" alt=""></div>
                 <div class="infocourse">
                     <div class="texto1">Curso de Cálculo Integral</div>
                     <div class="texto2"><b>Temario:</b></div>
