empezando form.html y biblio.html, modificacion chiquitas a index y courses.

--- a/courses.html
+++ b/courses.html
@@ -23,8 +23,6 @@
 </head>
 
 <body>
-    <div class="bgheader"></div>
-    <div class="degheader"></div>
     <header>
         <div class="parth-1">
             <h1>4</h1>
@@ -35,8 +33,8 @@
                 <ul>
                     <li class="itul"><a href="index.html">Inicio</a></li>
                     <li class="itul bgb"><a href="courses.html">Cursos</a></li>
-                    <li class="itul"><a href="#">Publicaciones</a></li>
-                    <li class="itul"><a href="#">Soporte</a></li>
+                    <li class="itul"><a href="#">Biblioteca</a></li>
+                    <li class="itul"><a href="form.html">Soporte</a></li>
                 </ul>
             </nav>
         </div>
