--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <ul>
                     <li class="itul bgb"><a href="index.html">Inicio</a></li>
                     <li class="itul"><a href="courses.html">Cursos</a></li>
-                    <li class="itul"><a href="#">Publicaciones</a></li>
-                    <li class="itul"><a href="#">Soporte</a></li>
+                    <li class="itul"><a href="biblio.html">Biblioteca</a></li>
+                    <li class="itul"><a href="form.html">Soporte</a></li>
                 </ul>
             </nav>
         </div>
