comienzo del form

--- a/courses.html
+++ b/courses.html
@@ -33,7 +33,7 @@
                 <ul>
                     <li class="itul"><a href="index.html">Inicio</a></li>
                     <li class="itul bgb"><a href="courses.html">Cursos</a></li>
-                    <li class="itul"><a href="#">Biblioteca</a></li>
+                    <li class="itul"><a href="biblio.html">Biblioteca</a></li>
                     <li class="itul"><a href="form.html">Soporte</a></li>
                 </ul>
             </nav>
