--- a/form.html
+++ b/form.html
@@ -42,29 +42,30 @@
             <div class="container">
                 <div class="form">
                     <form id="formulario" onsubmit="return validarFormulario()">
-                        <h3 class="titulo">Contact</h3>
+                        <h3 class="titulo">Escribi tus datos y envianos tu consulta!</h3>
                         <div class="input-container">
-                            <input type="text" name="nombre" id="nombre" class="input">
-                            <label for="nombre">Nombre</label>
-                            <span>Nombre</span>
+                          <input type="text" name="nombre" id="nombre" class="input">
+                          <label for="nombre">Nombre</label>
+                          <span>Nombre</span>
                         </div>
                         <div class="input-container">
-                            <input type="text" name="mail" id="mail" class="input">
-                            <label for="mail">Email</label>
-                            <span>Email</span>
+                          <input type="text" name="mail" id="mail" class="input">
+                          <label for="mail">Email</label>
+                          <span>Email</span>
                         </div>
                         <div class="input-container">
-                            <input type="tel" name="tel" id="tel" class="input">
-                            <label for="tel">Telefono</label>
-                            <span>Telefono</span>                         
+                          <input type="tel" name="tel" id="tel" class="input">
+                          <label for="tel">Telefono</label>
+                          <span>Telefono</span>                         
                         </div>
                         <div class="input-container textarea">
-                            <textarea name="consulta" class="input"></textarea>
-                            <label for="consulta">Consulta</label>
-                            <span>Consulta</span>
+                          <textarea name="consulta" id="consulta" class="input"></textarea>
+                          <label for="consulta">Consulta</label>
+                          <span>Consulta</span>
                         </div>
                         <input type="submit" value="Enviar" class="boton">
-                    </form>
+                      </form>
+                      
                 </div>
             </div>
         </div>
